cambio de color en el weather

--- a/css/index.css
+++ b/css/index.css
@@ -130,7 +130,7 @@ Clases de estilos personalizados
     right: 1%;
     padding: 1%;
     font-weight: bold;
-    color: #333333;
+    color: red;
     border: 1px solid #333333;
     border-radius: 8px;
 }
